# learn_opengl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: module.cmake  module_glad.cmake  module_glfw.cmake  module_glm.cmake
resources/01getting_started/: 4.3.1.texture.fs
resources/02lighting/: 2.1.basic_lighting.fs  2.2.basic_lighting.fs  2.3.3.basic_lighting.fs  2.3.3.basic_lighting.vs  3.1.materials.fs  4.1.lighting_maps.fs  4.1.lighting_maps.vs  4.2.lighting_maps.fs  4.3.lighting_maps.fs  4.4.lighting_maps.fs  5.1.light_casters.fs  5.2.light_casters.fs  5.3.light_casters.fs  5.4.light_casters.fs
resources/shaders/: 3.3.3.shader.vs
resources/textures/: 4.3.3.texture.fs
src/: CMakeLists.txt
src/01getting_started/01hello_window/: CMakeLists.txt  main.cpp
src/01getting_started/02hello_triangle/: CMakeLists.txt  main.cpp
src/01getting_started/03shaders/: CMakeLists.txt  main.cpp  shader.cpp
src/01getting_started/04textures/: CMakeLists.txt  main.cpp
src/01getting_started/05transformations/: CMakeLists.txt  main.cpp  shader.h
src/01getting_started/06coordinate_systems/: CMakeLists.txt  main.cpp  shader.h
src/01getting_started/07camera/: CMakeLists.txt  camera.h  main.cpp  shader.cpp
src/02lighting/01colors/: CMakeLists.txt  camera.cpp  main.cpp
src/02lighting/02basic_lighting/: CMakeLists.txt  camera.cpp  main.cpp  shader.h
src/02lighting/03materials/: CMakeLists.txt  camera.h  main.cpp
src/02lighting/04lighting_maps/: CMakeLists.txt  main.cpp  shader.cpp
src/02lighting/05light_casters/: CMakeLists.txt  main.cpp
src/02lighting/06multiple_lights/: CMakeLists.txt  main.cpp
src/03model_loading/01model/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h
