# 添加子目录，子目录下必须有CMakeLists.txt
add_subdirectory(01getting_started/01hello_window)
add_subdirectory(01getting_started/02hello_triangle)
add_subdirectory(01getting_started/03shaders)
add_subdirectory(01getting_started/04textures)
add_subdirectory(01getting_started/05transformations)
add_subdirectory(01getting_started/06coordinate_systems)
